--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -473,7 +473,7 @@
 }
 
 .btn_link_signup {
-  margin: 20px 0 20px 0;
+  margin: 20px 0;
   width: 60%;
   height: 40px;
   font-size: 1.4rem;
@@ -481,6 +481,105 @@
   background-color: #f2c746;
   border-radius: 40px;
   border: #f2c746 1px solid;
+  cursor: pointer;
+}
+
+.send_email_address {
+  display: inline-block;
+  margin: 10px 0 30px 0;
+  width: 90%;
+  font-size: 1.6rem;
+  color: #cf6775;
+  font-weight: bold;
+  text-align: center;
+}
+
+.send_email_text {
+  display: inline-block;
+  width: 90%;
+  font-size: 1.4rem;
+  text-align: left;
+  line-height: 2.8rem;
+}
+
+.send_email_return {
+  display: inline-block;
+  width: 90%;
+  margin: 30px 0 20px 0;
+  font-size: 1.6rem;
+  text-align: center;
+  text-decoration: underline;
+}
+
+.signup_step_container {
+  width: 100%;
+  margin: 10px 0 50px 0;
+  padding: 0 10%;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+
+.step_off,
+.step_on {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  line-height: 50px;
+  font-size: 1.6rem;
+  color: #fff;
+  position: relative;
+}
+
+.step_off {
+  background-color: #ccc;
+}
+
+.step_on {
+  background-color: #f2c746;
+}
+
+.step_off span,
+.step_on span {
+  width: 90px;
+  font-size: 1.2rem;
+  color: #fff;
+  position: absolute;
+  top: 50px;
+  left: -20px;
+  color: #666;
+}
+
+.signup_step_container::before {
+  content: '';
+  width: 6px;
+  height: 6px;
+  border: 0;
+  border-top: solid 3px #68a9cf;
+  border-right: solid 3px #68a9cf;
+  position: absolute;
+  top: 25px;
+  left: 32%;
+  margin-top: -4px;
+  transform: rotate(45deg);
+  transition: all 0.7s;
+  cursor: pointer;
+}
+
+.signup_step_container::after {
+  content: '';
+  width: 6px;
+  height: 6px;
+  border: 0;
+  border-top: solid 3px #68a9cf;
+  border-right: solid 3px #68a9cf;
+  position: absolute;
+  top: 25px;
+  right: 32%;
+  margin-top: -4px;
+  transform: rotate(45deg);
+  transition: all 0.7s;
   cursor: pointer;
 }
 
