--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,7 +29,7 @@ a {
 input:focus {
   outline: none;
   background-color: #fff;
-  border: 3px solid #bfdcff;
+  border: 1px solid #68a9cf;
   transition: all 0.5s;
 }
 
@@ -38,7 +38,7 @@ select {
   font-size: 1.4rem;
   -webkit-appearance: none;
   appearance: none;
-  border: 3px solid #edf2f7;
+  border: 1px solid #edf2f7;
   background-color: #edf2f7;
   transition: all 0.5s;
 }
