--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -26,7 +26,7 @@
 }
 .logo {
   margin: 0;
-  font-size: 24px;
+  font-size: 2.4rem;
   line-height: 60px;
   font-family: 'Montserrat', sans-serif;
   color: #000;
@@ -41,6 +41,7 @@
   margin: 0;
   padding: 0 15px;
   height: 30px;
+  font-size: 1.2rem;
   line-height: 30px;
   color: #fff;
   border-radius: 30px;
