--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -28,7 +28,8 @@
 .notes {
   margin: 0 auto 20px auto;
   width: 90%;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
+  line-height: 2.8rem;
   color: #999;
   text-align: left;
 }
@@ -265,10 +266,21 @@
 .input_mail,
 .input_password {
   margin: 0;
-  padding: 0 0 0 50px;
+  padding: 0 15px 0 45px;
   width: 100%;
   height: 40px;
   border-radius: 10px;
+}
+
+.input_mail_checked,
+.input_password_checked {
+  margin: 0;
+  padding: 0 15px 0 45px;
+  width: 100%;
+  height: 40px;
+  border-radius: 10px;
+  background-color: #fff;
+  border: 1px solid #68a9cf;
 }
 
 .forgot_password {
@@ -298,29 +310,107 @@
   text-align: left;
 }
 
-.birth_gender_container {
+.birth_container {
+  position: relative;
+  margin: 0 auto 20px auto;
   display: flex;
-  justify-self: start;
-  align-items: center;
-  width: 100%;
+  justify-content: space-between;
+  min-width: 260px;
+  width: 70%;
   height: 40px;
-  background-color: #fff;
+  border-radius: 10px;
 }
 
-.birth_gender {
+.birth_container :before,
+.birth_container :after {
+  content: '';
+  width: 6px;
+  height: 6px;
+  border: 0;
+  border-top: solid 1px #000;
+  border-right: solid 1px #000;
+  position: absolute;
+  top: 18px;
+  margin-top: -4px;
+  transform: rotate(135deg);
+  transition: all 0.7s;
+  z-index: 2;
+}
+
+.birth_container :before {
+  left: 86px;
+}
+
+.birth_container :after {
+  right: 16px;
+}
+
+.gender_container {
+  margin: 0 auto 50px auto;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
+  justify-content: space-between;
+  position: relative;
+  min-width: 260px;
+  width: 70%;
   height: 40px;
+  background-color: #edf2f7;
+  border-radius: 10px;
+}
+
+.gender_selected {
+  margin: 0;
+  width: 33%;
+  height: 40px;
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0%;
+  border-radius: 10px;
+  transition: all 0.3s;
+  background-color: #edf2f7;
+  border: 1px solid #edf2f7;
+}
+
+.gender_selected_1,
+.gender_selected_2,
+.gender_selected_3 {
+  margin: 0;
+  width: 33%;
+  height: 40px;
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  border-radius: 10px;
   background-color: #fff;
+  border: 1px solid #68a9cf;
+  transition: all 0.3s;
+}
+
+.gender_selected_1,
+.gender_selected_2,
+.gender_selected_3 {
+  background-color: #fff;
+  border: 1px solid #68a9cf;
+}
+
+.gender_selected_1 {
+  left: 0%;
+}
+
+.gender_selected_2 {
+  left: 34%;
+}
+
+.gender_selected_3 {
+  left: 67%;
 }
 
 .input_select,
 .input_select_active {
+  margin: 0;
   width: 110px;
   padding: 0 20px 0 10px;
-  height: 44px;
+  height: 40px;
   font-size: 14px;
   position: relative;
   background-color: #edf2f7;
@@ -331,69 +421,57 @@
 .input_select:focus,
 .input_select_active {
   outline: none;
-  background-color: #fff;
-  border: 2px solid #bfdcff;
+  background-color: #edf2f7;
+  border: 1px solid #edf2f7;
 }
 .input_select {
   color: #666;
-  border: 2px solid #fff;
+  border: 1px solid #fff;
   background-color: #edf2f7;
 }
 .input_select_active {
   color: #666;
-  border: 2px solid #68a9cf;
+  border: 1px solid #68a9cf;
   background-color: #fff;
 }
 
-.select_arrow span::before {
-  content: '';
-  width: 10px;
-  height: 10px;
-  border: 0;
-  border-top: solid 3px red;
-  border-right: solid 3px #fff;
-  position: absolute;
-  top: 15px;
-  left: 13px;
-  margin-top: -4px;
-  transform: rotate(-45deg);
-  transition: all 0.7s;
+.input_notes {
+  margin: 0 auto 20px auto;
+  width: 90%;
+  font-size: 1.2rem;
+  color: #999;
+  text-align: right;
+}
+
+.input_notes a {
+  text-decoration: underline;
 }
 
 .input_radio,
 .input_radio_active {
-  margin: 0 5px;
-  max-width: 50px;
-  width: 70px;
-  max-width: 70px;
-  height: 44px;
+  margin: 0;
+  width: 33%;
+  height: 40px;
   border-radius: 10px;
   font-size: 14px;
-  line-height: 40px;
+  line-height: 38px;
   transition: all 0.3s;
   color: #666;
-  transition: all 0.5s;
+  z-index: 2;
 }
 
 .input_radio {
   cursor: pointer;
-  background-color: #edf2f7;
-  border: 2px solid #fff;
-}
-
-.input_radio_active {
-  border: 2px solid #68a9cf;
-  background-color: #fff;
 }
 
 .input_error {
-  margin: 5px auto 20px auto;
+  margin: 10px auto 20px auto;
   padding: 0 10px;
   width: 90%;
   min-height: 1.2rem;
   text-align: left;
   font-size: 1.2rem;
-  line-height: 1.2rem;
+  line-height: 2rem;
   color: #cf6775;
 }
 
@@ -461,8 +539,7 @@
 }
 
 .send_email_address {
-  display: inline-block;
-  margin: 10px 0 30px 0;
+  margin: 0 auto 30px auto;
   width: 90%;
   font-size: 1.6rem;
   color: #cf6775;
@@ -471,17 +548,16 @@
 }
 
 .send_email_text {
-  display: inline-block;
+  margin: 0 auto;
   width: 90%;
   font-size: 1.4rem;
   text-align: left;
   line-height: 2.8rem;
 }
 
-.send_email_return {
-  display: inline-block;
+.link_return {
+  margin: 30px auto 20px auto;
   width: 90%;
-  margin: 30px 0 20px 0;
   font-size: 1.6rem;
   text-align: center;
   text-decoration: underline;
@@ -489,7 +565,7 @@
 
 .signup_step_container {
   width: 100%;
-  margin: 10px 0 50px 0;
+  margin: 10px 0 70px 0;
   padding: 0 10%;
   display: flex;
   justify-content: space-between;
@@ -498,7 +574,6 @@
 
 .step_off,
 .step_on {
-  display: inline-block;
   width: 50px;
   height: 50px;
   border-radius: 50px;
@@ -557,6 +632,14 @@
   transform: rotate(45deg);
   transition: all 0.7s;
   cursor: pointer;
+}
+
+.link_cancel {
+  margin: 30px auto 10px auto;
+  width: 90%;
+  color: #999;
+  text-decoration: underline;
+  font-size: 1.4rem;
 }
 
 /* 
