--- a/src/styles/Spinner.module.css
+++ b/src/styles/Spinner.module.css
@@ -1,3 +1,24 @@
+.overlay,
+.overlay_active {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  cursor: default;
+}
+
+.overlay {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.overlay_active {
+  opacity: 1;
+  visibility: visible;
+}
+
 .spinner {
   width: 50px; /* サイズ - 可変 */
   height: 20px; /* サイズ - 可変 */
