--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -156,7 +156,7 @@
 .search {
   width: 100%;
   height: 50px;
-  padding: 0 0 0 20px;
+  padding: 0 0 2px 20px;
   border: 2px solid #fff;
   border-radius: 3rem;
   background-color: #edf2f7;
