--- a/src/styles/components/form.module.css
+++ b/src/styles/components/form.module.css
@@ -86,6 +86,7 @@
   padding: 0 20px;
   width: 90%;
   height: 40px;
+  line-height: 40px;
   border-radius: 10px;
 }
 
@@ -95,6 +96,7 @@
   padding: 0 20px;
   width: 90%;
   height: 40px;
+  line-height: 40px;
   border-radius: 10px;
   background-color: #fff;
   border: 1px solid #68a9cf;
