--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -156,7 +156,7 @@
 .search {
   width: 100%;
   height: 50px;
-  padding: 0 0 4px 20px;
+  padding: 0 0 3px 20px;
   line-height: 40px;
   border: 2px solid #fff;
   border-radius: 3rem;
@@ -198,4 +198,55 @@
   top: 0;
   right: 0;
   cursor: pointer;
+}
+
+.card2 {
+  margin: 0 10px 20px 10px;
+  padding: 10px 30px 10px 10px;
+  text-align: left;
+  color: inherit;
+  text-decoration: none;
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+  min-width: 300px;
+  max-width: 850px;
+  background-color: #fff;
+  transition: all 0.3s;
+  font-size: 1.4rem;
+  position: relative;
+}
+
+.ul_event {
+  margin: 0;
+  padding: 0;
+}
+
+.li_event_line {
+  border-top: 0;
+  border-right: 0;
+  border-left: 0;
+  border-bottom: 1px solid #eaeaea;
+  width: 100%;
+}
+.card2 a::before {
+  content: '';
+  width: 8px;
+  height: 8px;
+  border: 0;
+  border-top: solid 2px #68a9cf;
+  border-right: solid 2px #68a9cf;
+  position: absolute;
+  top: 50%;
+  right: 26px;
+  margin-top: -4px;
+  transform: rotate(45deg);
+  transition: all 0.7s;
+  cursor: pointer;
+}
+
+.card2 a {
+  display: block;
+  height: 100%;
+  width: 100%;
+  padding: 0 30px 0 10px;
 }
