--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -47,3 +47,7 @@ input:-webkit-autofill {
   box-shadow: 0 0 0 1000px #fff inset;
   -webkit-box-shadow: 0 0 0px 1000px inset inset;
 }
+
+li {
+  list-style: none;
+}
