--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -30,8 +30,9 @@
   justify-content: center;
   flex-wrap: wrap;
   min-width: 320px;
-  max-width: 800px;
-  margin-top: 3rem;
+  max-width: 100%;
+  margin-top: 10rem;
+  background-color: #f7f8fa;
 }
 
 /* .new_hot_label {
@@ -202,12 +203,12 @@
 
 .card2 {
   margin: 0 10px 20px 10px;
-  padding: 10px 30px 10px 10px;
+  padding: 15px 40px 15px 15px;
   text-align: left;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
-  border-radius: 10px;
+  border-radius: 5px;
   min-width: 300px;
   max-width: 850px;
   background-color: #fff;
@@ -228,7 +229,7 @@
   border-bottom: 1px solid #eaeaea;
   width: 100%;
 }
-.card2 a::before {
+.card2::before {
   content: '';
   width: 8px;
   height: 8px;
@@ -237,7 +238,7 @@
   border-right: solid 2px #68a9cf;
   position: absolute;
   top: 50%;
-  right: 26px;
+  right: 18px;
   margin-top: -4px;
   transform: rotate(45deg);
   transition: all 0.7s;
