--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -24,17 +24,6 @@
   color: #000;
 }
 
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  min-width: 320px;
-  max-width: 100%;
-  margin-top: 10rem;
-  background-color: #f7f8fa;
-}
-
 /* .new_hot_label {
   width: 100%;
   text-align: left;
@@ -44,7 +33,7 @@
 } */
 
 .label_hot_new {
-  margin: 40px 0 40px 0;
+  margin: 40px 0 60px 0;
   font-size: 1.8rem;
   position: relative;
   text-align: center;
@@ -201,20 +190,31 @@
   cursor: pointer;
 }
 
+.grid {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  min-width: 320px;
+  max-width: 100%;
+  margin-top: 10rem;
+  background-color: #f1f1f1;
+}
 .card2 {
   margin: 0 10px 20px 10px;
   padding: 15px 40px 15px 15px;
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 5px;
+  /* border: 1px solid #eaeaea; */
+  /* border-radius: 5px; */
   min-width: 300px;
   max-width: 850px;
   background-color: #fff;
   transition: all 0.3s;
   font-size: 1.4rem;
   position: relative;
+  box-shadow: 0 1px 4px rgb(0 0 0 / 10%);
 }
 
 .ul_event {
