--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,5 +1,5 @@
 .main {
-  max-width: 800px;
+  max-width: 830px;
   min-width: 320px;
   margin: 80px auto;
   background-color: #fff;
@@ -199,27 +199,53 @@
   max-width: 100%;
   margin-top: 10rem;
   background-color: #f1f1f1;
+  padding: 0 10px;
 }
 .card2 {
-  margin: 0 10px 20px 10px;
+  margin: 0 0 20px 0;
   padding: 15px 40px 15px 15px;
   text-align: left;
   color: inherit;
   text-decoration: none;
   /* border: 1px solid #eaeaea; */
   /* border-radius: 5px; */
-  min-width: 300px;
-  max-width: 850px;
+  width: 100% !important;
   background-color: #fff;
   transition: all 0.3s;
   font-size: 1.4rem;
   position: relative;
   box-shadow: 0 1px 4px rgb(0 0 0 / 10%);
 }
-
-.ul_event {
-  margin: 0;
-  padding: 0;
+@media screen and (max-width: 669px) {
+  .ul_event {
+    display: grid;
+    grid-template-columns: 100%;
+    margin: 0;
+    padding: 0;
+    line-height: 0;
+    -webkit-column-count: 1;
+    -webkit-column-gap: 20px;
+    -moz-column-count: 1;
+    -moz-column-gap: 20px;
+    column-count: 1;
+    column-gap: 20px;
+  }
+}
+@media screen and (min-width: 670px) {
+  .ul_event {
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: auto auto;
+    margin: 0;
+    padding: 0;
+    line-height: 0;
+    -webkit-column-count: 2;
+    -webkit-column-gap: 20px;
+    -moz-column-count: 2;
+    -moz-column-gap: 20px;
+    column-count: 2;
+    column-gap: 20px;
+  }
 }
 
 .li_event_line {
@@ -228,6 +254,7 @@
   border-left: 0;
   border-bottom: 1px solid #eaeaea;
   width: 100%;
+  margin: 20px 0 10px 0;
 }
 .card2::before {
   content: '';
@@ -247,7 +274,15 @@
 
 .card2 a {
   display: block;
-  height: 100%;
   width: 100%;
   padding: 0 30px 0 10px;
+}
+
+.contents_title {
+  margin: 10px 0;
+}
+
+.event_title {
+  margin: 10px 0 0 0;
+  line-height: 20px;
 }
