--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,8 +1,7 @@
 .main {
   max-width: 830px;
   min-width: 320px;
-  margin: 80px auto;
-  background-color: #fff;
+  margin: 80px auto 0 auto;
 }
 
 .title {
@@ -34,9 +33,10 @@
 
 .label_hot_new {
   margin: 40px 0 60px 0;
-  font-size: 1.8rem;
+  font-size: 2rem;
   position: relative;
   text-align: center;
+  font-weight: bold;
 }
 
 .label_hot_new span:before {
@@ -198,11 +198,10 @@
   min-width: 320px;
   max-width: 100%;
   margin-top: 10rem;
-  background-color: #f1f1f1;
   padding: 0 10px;
 }
 .card2 {
-  margin: 0 0 20px 0;
+  margin: 0 0 10px 0;
   padding: 15px 40px 15px 15px;
   text-align: left;
   color: inherit;
@@ -210,6 +209,7 @@
   /* border: 1px solid #eaeaea; */
   /* border-radius: 5px; */
   width: 100% !important;
+  height: auto !important;
   background-color: #fff;
   transition: all 0.3s;
   font-size: 1.4rem;
@@ -229,6 +229,9 @@
     -moz-column-gap: 20px;
     column-count: 1;
     column-gap: 20px;
+    -webkit-column-break-inside: avoid;
+    page-break-inside: avoid;
+    break-inside: avoid;
   }
 }
 @media screen and (min-width: 670px) {
@@ -240,11 +243,15 @@
     padding: 0;
     line-height: 0;
     -webkit-column-count: 2;
-    -webkit-column-gap: 20px;
+    -webkit-column-gap: 10px;
     -moz-column-count: 2;
-    -moz-column-gap: 20px;
+    -moz-column-gap: 10px;
     column-count: 2;
-    column-gap: 20px;
+    column-gap: 10px;
+    line-height: 0;
+    -webkit-column-break-inside: avoid;
+    page-break-inside: avoid;
+    break-inside: avoid;
   }
 }
 
@@ -285,4 +292,13 @@
 .event_title {
   margin: 10px 0 0 0;
   line-height: 20px;
+}
+
+.wrapper_white {
+  width: 100%;
+}
+.wrapper_glay {
+  width: 100%;
+  background-color: #f1f1f1;
+  padding: 0 0 60px 0;
 }
