--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -3,7 +3,16 @@
   min-width: 320px;
   margin: 40px auto;
   padding: 10px 0;
-  background-color: #fff;
+}
+
+.wrapper_white {
+  width: 100%;
+}
+.wrapper_glay {
+  width: 100%;
+  background-color: #f1f1f1;
+  /* background-color: #faf9f7; */
+  padding: 0 0 60px 0;
 }
 
 .total_bar_container {
@@ -280,6 +289,7 @@
   text-align: left;
   font-size: 1.4rem;
   padding: 10px;
+  line-height: 20px;
 }
 .subtotalcontainer {
   text-align: right;
@@ -308,11 +318,11 @@
   width: 10px;
   height: 10px;
   border: 0;
-  border-top: solid 3px #68a9cf;
-  border-right: solid 3px #68a9cf;
+  border-top: solid 2px #68a9cf;
+  border-right: solid 2px #68a9cf;
   position: absolute;
-  top: 15px;
-  left: 13px;
+  top: 22px;
+  left: 5px;
   margin-top: -4px;
   transform: rotate(-45deg);
   transition: all 0.7s;
@@ -323,11 +333,11 @@
   width: 10px;
   height: 10px;
   border: 0;
-  border-top: solid 3px #68a9cf;
-  border-right: solid 3px #68a9cf;
+  border-top: solid 2px #68a9cf;
+  border-right: solid 2px #68a9cf;
   position: absolute;
   top: 15px;
-  left: 13px;
+  left: 5px;
   margin-top: -4px;
   transform: rotate(135deg);
   transition: all 0.7s;
@@ -677,4 +687,45 @@
 
 .sort_buy_active {
   font-weight: bold;
+}
+
+.ul_event {
+  display: grid;
+  grid-template-columns: 100%;
+  margin: 0;
+  padding: 0;
+  line-height: 0;
+  -webkit-column-count: 1;
+  -webkit-column-gap: 20px;
+  -moz-column-count: 1;
+  -moz-column-gap: 20px;
+  column-count: 1;
+  column-gap: 20px;
+  -webkit-column-break-inside: avoid;
+  page-break-inside: avoid;
+  break-inside: avoid;
+}
+
+.grid {
+  flex-wrap: wrap;
+  min-width: 320px;
+  max-width: 100%;
+  margin-top: 10rem;
+  padding: 0 10px;
+}
+.card2 {
+  margin: 0 0 20px 0;
+  padding: 10px;
+  text-align: left;
+  color: inherit;
+  text-decoration: none;
+  /* border: 1px solid #eaeaea; */
+  /* border-radius: 5px; */
+  width: 100% !important;
+  height: auto !important;
+  background-color: #fff;
+  transition: all 0.3s;
+  font-size: 1.4rem;
+  position: relative;
+  box-shadow: 0 1px 4px rgb(0 0 0 / 10%);
 }
