--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -664,9 +664,8 @@
 
 .sort_container {
   width: 100%;
-  height: 30px;
-  padding: 0 20px 0 20px;
-  text-align: left;
+  padding: 60px 20px 20px 20px;
+  text-align: right;
   font-size: 1.4rem;
 }
 
@@ -711,7 +710,7 @@
   flex-wrap: wrap;
   min-width: 320px;
   max-width: 100%;
-  margin-top: 10rem;
+  margin: 0;
   padding: 0 10px;
 }
 .card2 {
