--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -254,7 +254,7 @@
 
 .goods_items_container {
   margin: 0;
-  transition: all 0.7s;
+  transition: all 0.5s;
   max-height: 2000px;
   overflow: hidden;
 }
@@ -262,7 +262,7 @@
 .goods_items_container_active {
   margin: 0;
   max-height: 0;
-  transition: all 0.7s;
+  transition: all 0.5s;
   overflow: hidden;
 }
 
@@ -288,7 +288,7 @@
   width: 100%;
   text-align: left;
   font-size: 1.6rem;
-  padding: 10px;
+  padding: 10px 0;
   line-height: 20px;
 }
 .subtotalcontainer {
@@ -296,7 +296,7 @@
   width: 100%;
   margin: 0;
   height: 40px;
-  padding: 0 20px 0 10px;
+  padding: 0;
   position: relative;
   display: -webkit-flex;
   display: flex;
@@ -378,7 +378,7 @@
 .goods_detail_container {
   width: 100%;
   margin: 0;
-  padding: 10px 10px 10px 0;
+  padding: 10px 0;
   display: flex;
   justify-content: flex-end;
   transition: all 0.3s;
@@ -715,7 +715,7 @@
 }
 .card2 {
   margin: 0 0 20px 0;
-  padding: 10px;
+  padding: 10px 20px;
   text-align: left;
   color: inherit;
   text-decoration: none;
@@ -728,4 +728,13 @@
   font-size: 1.4rem;
   position: relative;
   box-shadow: 0 1px 4px rgb(0 0 0 / 10%);
+}
+
+.li_goods_line {
+  border-top: 0;
+  border-right: 0;
+  border-left: 0;
+  border-bottom: 1px solid #eaeaea;
+  width: 100%;
+  margin: 10px 0;
 }
