--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -391,7 +391,7 @@
   font-size: 1.2rem;
   text-align: right;
   min-width: 20px;
-  margin: 0 10px 0 10px;
+  margin: 0 10px 0 0;
   line-height: 20px;
 }
 
