--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -4,7 +4,9 @@
   margin: 40px auto;
   padding: 10px 0;
 }
-
+.sticky_container {
+  width: 100%;
+}
 .wrapper_white {
   width: 100%;
 }
@@ -20,7 +22,8 @@
   height: 40px;
   padding: 0;
   background-color: #000;
-  position: relative;
+  position: sticky;
+  top: 0;
   z-index: 1;
   opacity: 0.7;
 }
