--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -37,35 +37,36 @@
 .modal_container {
   opacity: 0;
   visibility: hidden;
-  transform: scale(0.5);
-  transition: 0.2s linear;
-  min-width: 300px;
+  /* transform: scale(0.5); */
+  transform: translateY(100px);
+  transition: 0.2s;
+  min-width: 280px;
   max-width: 400px;
   width: 100%;
-  margin: 10px;
+  margin: 0 20px;
   background-color: #fff;
   padding: 20px;
-  border-radius: 10px;
   cursor: default;
 }
 
 .modal_container_active {
   opacity: 1;
   visibility: visible;
-  transform: scale(1);
-  transition: 0.2s linear;
-  min-width: 300px;
+  /* transform: scale(1); */
+  transform: translateY(0);
+  transition: 0.2s;
+  min-width: 280px;
   max-width: 400px;
   max-height: 500px;
   width: 100%;
-  margin: 10px;
+  margin: 0 20px;
   background-color: #fff;
-  padding: 20px;
-  border-radius: 10px;
+  padding: 20px 30px 40px 30px;
   overflow-y: auto;
   overflow-y: scroll;
   -ms-overflow-style: none; /* IE, Edge 対応 */
   scrollbar-width: none; /* Firefox 対応 */
+  position: relative;
 }
 
 .modal_container_active::-webkit-scrollbar {
@@ -85,8 +86,10 @@
   display: block;
   width: 20px; /*枠の大きさ*/
   height: 20px; /*枠の大きさ*/
-  position: relative;
+  position: absolute;
   cursor: pointer;
+  top: 10px;
+  right: 10px;
 }
 
 .close_button::before,
@@ -119,7 +122,7 @@
 
 .title {
   width: 100%;
-  margin: 0;
+  margin: 20px 0 0 0;
   font-size: 1.6rem;
   font-weight: bold;
 }
@@ -134,7 +137,7 @@
 
 .button {
   margin: 0;
-  width: 270px;
+  width: 100%;
   height: 40px;
   background-color: #68a9cf;
   border-radius: 5px;
@@ -144,5 +147,17 @@
   color: #fff;
   letter-spacing: 2px;
   text-align: center;
+  cursor: pointer;
+}
+
+.link {
+  margin: 0;
+  width: 100%;
+  height: 40px;
+  font-size: 1.4rem;
+  color: #fff;
+  background-color: #f2c746;
+  border-radius: 40px;
+  border: #f2c746 1px solid;
   cursor: pointer;
 }
