--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -45,7 +45,7 @@
   width: 100%;
   margin: 0 20px;
   background-color: #fff;
-  padding: 20px;
+  padding: 20px 30px 40px 30px;
   cursor: default;
 }
 
