--- a/src/styles/Search.module.css
+++ b/src/styles/Search.module.css
@@ -1,9 +1,24 @@
 .main {
-  max-width: 800px;
+  max-width: 840px;
   min-width: 320px;
-  margin: 0 auto;
-  background-color: #fff;
-  text-align: center;
+  margin: 80px auto 0 auto;
+}
+
+.main2 {
+  max-width: 840px;
+  min-width: 320px;
+  margin: 50px auto 0 auto;
+}
+
+.wrapper_white {
+  width: 100%;
+}
+.wrapper_glay {
+  width: 100%;
+  background-color: #f1f1f1;
+  /* background-color: #faf9f7; */
+  padding: 10px 0 60px 0;
+  margin: 0;
 }
 
 .content_title {
@@ -24,23 +39,17 @@
   background: #68a9cf;
 }
 
-.card {
-  margin: 0 10px 20px 10px;
-  padding: 5px 10px;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  min-width: 300px;
-  max-width: 850px;
-  background-color: #fff;
-  transition: all 0.3s;
+.grid {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  min-width: 320px;
+  max-width: 100%;
+  margin-top: 0;
+  padding: 0 10px;
 }
 
-.card:hover {
-  filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.1));
-}
 .new_event_border li:first-child {
   border: none;
 }
@@ -49,70 +58,8 @@
   border: none;
 }
 
-/* .card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-} */
-.card li {
-  list-style: none;
-  line-height: 1.5;
-  margin: 0;
-  padding: 10px 0;
-  border-top: 1px solid #ccc;
-  font-size: 1.4rem;
-  position: relative;
-}
-
-.card li span::before {
-  content: '';
-  width: 6px;
-  height: 6px;
-  border: 0;
-  border-top: solid 3px #68a9cf;
-  border-right: solid 3px #68a9cf;
-  position: absolute;
-  top: 50%;
-  right: 14px;
-  margin-top: -4px;
-  transform: rotate(45deg);
-  transition: all 0.7s;
-  cursor: pointer;
-}
-
-.card li a {
-  display: block;
-  height: 100%;
-  width: 100%;
-  padding: 0 30px 0 10px;
-}
-
-.card li:first-child {
-  border: none;
-}
-
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.2rem;
-  text-align: center;
-  color: #68a9cf;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.card a:hover,
-.card a:focus,
-.card a:active {
-  color: #68a9cf;
-}
-
 .search_result_title {
-  margin: 0 0 20px 0;
+  margin: 0 0 30px 0;
   width: 100%;
   text-align: center;
   padding: 0 20px;
@@ -187,4 +134,133 @@
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
+}
+
+@media screen and (max-width: 669px) {
+  .ul_event {
+    display: grid;
+    grid-template-columns: 100%;
+    margin: 0;
+    padding: 0;
+    line-height: 0;
+    -webkit-column-count: 1;
+    -webkit-column-gap: 20px;
+    -moz-column-count: 1;
+    -moz-column-gap: 20px;
+    column-count: 1;
+    column-gap: 20px;
+    -webkit-column-break-inside: avoid;
+    page-break-inside: avoid;
+    break-inside: avoid;
+  }
+
+  .li_event {
+    margin: 0 0 20px 0;
+    padding: 0;
+    text-align: left;
+    color: inherit;
+    text-decoration: none;
+    /* border: 1px solid #eaeaea; */
+    /* border-radius: 5px; */
+    width: 100% !important;
+    height: auto !important;
+    background-color: #fff;
+    transition: all 0.5s;
+    font-size: 1.4rem;
+    position: relative;
+    box-shadow: 0 1px 4px rgb(0 0 0 / 10%);
+    /* opacity: 0;
+    visibility: hidden; */
+  }
+}
+@media screen and (min-width: 670px) {
+  .ul_event {
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: auto auto;
+    margin: 0;
+    padding: 0;
+    line-height: 0;
+    -webkit-column-count: 2;
+    -webkit-column-gap: 20px;
+    -moz-column-count: 2;
+    -moz-column-gap: 20px;
+    column-count: 2;
+    column-gap: 20px;
+    line-height: 0;
+    -webkit-column-break-inside: avoid;
+    page-break-inside: avoid;
+    break-inside: avoid;
+    width: 820px;
+  }
+
+  .li_event {
+    margin: 0 0 20px 0;
+    padding: 0;
+    text-align: left;
+    color: inherit;
+    text-decoration: none;
+    /* border: 1px solid #eaeaea; */
+    /* border-radius: 5px; */
+    width: 100% !important;
+    max-width: 400px !important;
+    height: auto !important;
+    background-color: #fff;
+    transition: all 0.5s;
+    font-size: 1.4rem;
+    position: relative;
+    box-shadow: 0 1px 4px rgb(0 0 0 / 10%);
+    /* opacity: 0;
+    visibility: hidden; */
+  }
+}
+
+.li_event a {
+  display: block;
+  width: 100%;
+  padding: 0 30px 0 10px;
+}
+
+.li_event_padding {
+  margin: 0;
+  padding: 15px 10px 15px 15px;
+}
+
+.li_event.is_show {
+  opacity: 1;
+  visibility: visible;
+}
+
+.li_event::before {
+  content: '';
+  width: 8px;
+  height: 8px;
+  border: 0;
+  border-top: solid 2px #68a9cf;
+  border-right: solid 2px #68a9cf;
+  position: absolute;
+  top: 50%;
+  right: 18px;
+  margin-top: -4px;
+  transform: rotate(45deg);
+  transition: all 0.7s;
+  cursor: pointer;
+}
+
+.li_event_line {
+  border-top: 0;
+  border-right: 0;
+  border-left: 0;
+  border-bottom: 1px solid #eaeaea;
+  width: 100%;
+  margin: 20px 0 10px 0;
+}
+
+.contents_title {
+  margin: 10px 0;
+}
+
+.event_title {
+  margin: 10px 0 0 0;
+  line-height: 20px;
 }
