--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -123,9 +123,21 @@
   height: 50px;
   padding: 0 0 3px 20px;
   line-height: 40px;
-  border: 2px solid #fff;
+  border: 1px solid #fff;
   border-radius: 3rem;
   background-color: #edf2f7;
+  transition: all 0.5s;
+  margin: 0 0 40px 0;
+  -webkit-appearance: none;
+}
+.search_active {
+  width: 100%;
+  height: 50px;
+  padding: 0 0 3px 20px;
+  line-height: 40px;
+  border: 1px solid #68a9cf;
+  border-radius: 3rem;
+  background-color: #fff;
   transition: all 0.5s;
   margin: 0 0 40px 0;
   -webkit-appearance: none;
@@ -147,7 +159,8 @@
   transform: translate(-50%, 0);
 }
 
-.search_button {
+.search_button,
+.search_button_active {
   position: absolute;
   width: 24px;
   width: 24px;
@@ -155,13 +168,19 @@
   right: 18px;
 }
 
-.search_button svg {
-  position: absolute;
+.search_button svg,
+.search_button_active svg {
   width: 24px;
   height: 24px;
+  transition: all 0.3s;
+}
+
+.search_button svg {
+  fill: #999;
+}
+
+.search_button_active svg {
   fill: #68a9cf;
-  top: 0;
-  right: 0;
   cursor: pointer;
 }
 
@@ -345,7 +364,7 @@
 .li_event a {
   display: block;
   width: 100%;
-  padding: 0 30px 0 10px;
+  padding: 0 30px 0 0;
 }
 
 .contents_title {
