--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -551,23 +551,37 @@
   white-space: nowrap;
 }
 
-.list_header_sns {
+.list_header_status {
   display: flex;
-  justify-content: right;
+  justify-content: left;
   align-items: center;
 }
 
-.tag_new {
+.tag_status {
   margin: 0 20px 0 0;
   height: 30px;
   line-height: 28px;
-  padding: 0 10px 0 30px;
+  padding: 0 10px 0 10px;
   color: #666;
   font-size: 1.2rem;
   text-align: right;
   position: relative;
   border-radius: 5px;
   border: 1px solid #999;
+}
+
+.tag_create {
+  margin: 0 20px 0 0;
+  height: 30px;
+  line-height: 30px;
+  padding: 0;
+  color: #666;
+  font-size: 1.2rem;
+  text-align: right;
+  position: relative;
+  border-radius: 5px;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .tag_new span {
@@ -613,7 +627,7 @@
   display: block;
   content: '';
   position: absolute;
-  top: 3px;
+  top: 4px;
   left: 4px;
   width: 20px;
   height: 20px;
