--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -212,7 +212,7 @@
   justify-content: left;
   align-items: center;
   height: 20px;
-  margin: 0 20px 20px 20px;
+  margin: 0 20px;
 }
 .event_date_container svg {
   width: 20px;
@@ -226,6 +226,54 @@
   text-align: left;
   font-size: 1.4rem;
   color: #666;
+  line-height: 20px;
+}
+
+.event_memo_container {
+  margin: 10px 20px 0 20px;
+  padding: 0 0 0 26px;
+  width: 100%;
+  height: 20px;
+  position: relative;
+  transition: all 0.5s;
+  max-height: 0px;
+  overflow: hidden;
+}
+
+.event_memo_container_active {
+  margin: 10px 20px 0 20px;
+  padding: 0 0 0 26px;
+  width: 100%;
+  position: relative;
+  transition: all 0.5s;
+  max-height: 20px;
+  overflow: hidden;
+}
+.event_memo {
+  margin: 0;
+  text-align: left;
+  font-size: 1.4rem;
+  color: #666;
+  line-height: 20px;
+}
+
+.event_memo_container span,
+.event_memo_container_active span {
+  display: block;
+  content: '';
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  color: #fff;
+  top: 1px;
+  left: 0px;
+}
+
+.event_memo_container svg,
+.event_memo_container_active svg {
+  width: 16px;
+  height: 16px;
+  fill: #666;
 }
 
 .goods_list_ul {
@@ -607,35 +655,52 @@
 
 .event_link_container {
   width: 100%;
-  padding: 15px 20px 20px 20px;
+  padding: 20px 20px 20px 20px;
   display: flex;
   justify-content: left;
 }
 
-.tag_official {
+.tag_official,
+.tag_memo,
+.tag_screenshot {
   margin: 0 20px 0 0;
-  height: 30px;
-  line-height: 28px;
-  padding: 0 10px 0 30px;
+  padding: 5px 10px 5px 30px;
   color: #68a9cf;
   font-size: 1.2rem;
   text-align: right;
   position: relative;
   border-radius: 5px;
   border: 1px solid #68a9cf;
+  cursor: pointer;
 }
 
-.tag_official span {
+.tag_official span,
+.tag_memo span,
+.tag_screenshot span {
   display: block;
   content: '';
   position: absolute;
-  top: 4px;
-  left: 4px;
   width: 20px;
   height: 20px;
   color: #fff;
 }
-.tag_official svg {
+
+.tag_official span {
+  top: 5px;
+  left: 4px;
+}
+.tag_memo span {
+  top: 5px;
+  left: 4px;
+}
+.tag_screenshot span {
+  top: 6px;
+  left: 4px;
+}
+
+.tag_official svg,
+.tag_memo svg,
+.tag_screenshot svg {
   width: 16px;
   height: 16px;
   fill: #68a9cf;
