--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -656,19 +656,19 @@
   display: flex;
   justify-content: left;
   flex-wrap: wrap;
-  gap: 20px 20px;
 }
 
 .tag_official,
 .tag_memo,
 .tag_screenshot {
   width: auto;
-  margin: 0;
+  margin: 0 0 20px 20px;
   padding: 5px 10px 5px 30px;
   color: #68a9cf;
   font-size: 1.2rem;
   text-align: right;
   position: relative;
+  left: -20px;
   border-radius: 5px;
   border: 1px solid #68a9cf;
   cursor: pointer;
