--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -1,8 +1,7 @@
 .main {
   max-width: 800px;
   min-width: 320px;
-  margin: 40px auto;
-  padding: 10px 0;
+  margin: 20px auto;
 }
 .sticky_container {
   width: 100%;
@@ -14,7 +13,7 @@
   width: 100%;
   background-color: #f1f1f1;
   /* background-color: #faf9f7; */
-  padding: 0 0 60px 0;
+  padding: 30px 0 60px 0;
 }
 
 .total_bar_container {
@@ -750,47 +749,60 @@
   visibility: visible;
 }
 
+.sort_arrow_container {
+  margin: 0 0 20px 0;
+  padding: 0 10px;
+  width: 100%;
+  display: flex;
+  justify-content: right;
+}
+
 .sort_container {
-  margin: 40px auto 50px auto;
-  text-align: center;
-  font-size: 1.6rem;
-  border-radius: 30px;
+  margin: 0;
+  width: 160px;
+  font-size: 1.4rem;
+  background-color: #eee;
+  box-shadow: 0 1px 4px rgb(0 0 0 / 10%);
 }
 
 .sort_nomal,
 .sort_nomal_active {
-  padding: 10px 30px;
-  border-radius: 30px;
+  width: 50%;
+  padding: 10px 0;
+  border-radius: 5px;
   transition: all 0.3s;
+  border: none;
 }
 
 .sort_nomal {
   color: #999;
-  background-color: #fff;
   cursor: pointer;
 }
 
 .sort_nomal_active {
-  color: #fff;
-  background-color: #f2c746;
+  color: #68a9cf;
+  background-color: #fff;
 }
+
+/* background-color: #f2c746; */
 
 .sort_buy,
 .sort_buy_active {
-  padding: 10px 30px;
+  width: 50%;
+  padding: 10px 0;
+  border-radius: 5px;
   cursor: pointer;
-  border-radius: 30px;
   transition: all 0.5s;
+  border: none;
 }
 
 .sort_buy {
   color: #999;
-  background-color: #fff;
 }
 
 .sort_buy_active {
-  color: #fff;
-  background-color: #f2c746;
+  color: #68a9cf;
+  background-color: #fff;
 }
 
 .ul_event {
