--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -753,6 +753,7 @@
   margin: 0 0 20px 0;
   padding: 0 10px;
   width: 100%;
+  height: auto;
   display: flex;
   justify-content: right;
 }
@@ -760,16 +761,18 @@
 .sort_container {
   margin: 0;
   width: 160px;
+  height: auto;
   font-size: 1.4rem;
-  background-color: #eee;
+  background-color: red;
   box-shadow: 0 1px 4px rgb(0 0 0 / 10%);
 }
 
 .sort_nomal,
 .sort_nomal_active {
   width: 50%;
+  height: auto;
   padding: 10px 0;
-  border-radius: 5px;
+  /* border-radius: 5px; */
   transition: all 0.3s;
   border: none;
 }
@@ -790,7 +793,7 @@
 .sort_buy_active {
   width: 50%;
   padding: 10px 0;
-  border-radius: 5px;
+  /* border-radius: 5px; */
   cursor: pointer;
   transition: all 0.5s;
   border: none;
