--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -37,20 +37,38 @@
   z-index: 1;
   opacity: 0.7;
 }
-
-.total_bar {
-  max-width: 800px;
-  min-width: 320px;
-  height: 40px;
-  padding: 0 10px;
-  margin: auto;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-justify-content: flex-end;
-  justify-content: flex-end;
-  -webkit-align-items: right;
-  align-items: center;
-  transition: all 0.3s;
+@media screen and (max-width: 399px) {
+  .total_bar {
+    width: 100%;
+    min-width: 320px;
+    height: 40px;
+    padding: 0 20px;
+    margin: 0;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
+    -webkit-align-items: center;
+    align-items: center;
+    transition: all 0.3s;
+  }
+}
+@media screen and (min-width: 400px) {
+  .total_bar {
+    max-width: 800px;
+    min-width: 400px;
+    height: 40px;
+    margin: 0;
+    padding: 0 20px;
+    margin: auto;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: flex-end;
+    justify-content: flex-end;
+    -webkit-align-items: center;
+    align-items: center;
+    transition: all 0.3s;
+  }
 }
 
 .reset {
@@ -111,54 +129,53 @@
 }
 
 .save {
-  min-width: 65px;
-  font-size: 12px;
+  width: auto;
+  padding: 5px 10px 5px 30px;
+  font-size: 1.2rem;
   color: #ffd700;
-  line-height: 40px;
   position: relative;
   text-align: right;
   cursor: pointer;
-  padding: 0 10px 0 0;
-}
-
-.save span {
-  display: block;
-  content: '';
-  position: absolute;
-  top: 5px;
-  left: 10px;
-  width: 20px;
-  height: 20px;
-}
-.save svg {
-  width: 20px;
-  height: 20px;
-  fill: #ffd700;
+  border: 1px solid #ffd700;
+  box-sizing: border-box;
+  border-radius: 5px;
+  transition: all 0.3s;
 }
 
 .save_off {
-  min-width: 65px;
-  font-size: 12px;
+  width: auto;
+  padding: 5px 10px 5px 30px;
+  font-size: 1.2rem;
   color: #999;
-  line-height: 40px;
   position: relative;
   text-align: right;
   cursor: pointer;
-  padding: 0 10px 0 0;
+  border: 1px solid #000;
+  box-sizing: border-box;
+  border-radius: 5px;
+  transition: all 0.3s;
 }
 
-.save_off span {
+.save svg,
+.save_off svg {
   display: block;
   content: '';
   position: absolute;
-  top: 5px;
-  left: 10px;
-  width: 20px;
-  height: 20px;
+  width: 16px;
+  height: 16px;
+  top: 50%;
+  left: 8px;
+  transform: translate(0, -50%);
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transition: all 0.3s;
 }
+
+.save svg {
+  fill: #ffd700;
+}
+
 .save_off svg {
-  width: 20px;
-  height: 20px;
   fill: #999;
 }
 
@@ -170,7 +187,7 @@
   text-align: right;
 }
 .total {
-  width: 110px;
+  width: 130px;
   line-height: 40px;
   margin: 0;
   text-align: right;
@@ -815,11 +832,11 @@
   padding: 0;
   line-height: 0;
   -webkit-column-count: 1;
-  -webkit-column-gap: 20px;
+  -webkit-column-gap: 20px 0;
   -moz-column-count: 1;
-  -moz-column-gap: 20px;
+  -moz-column-gap: 20px 0;
   column-count: 1;
-  column-gap: 20px;
+  column-gap: 20px 0;
   -webkit-column-break-inside: avoid;
   page-break-inside: avoid;
   break-inside: avoid;
