--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -885,3 +885,97 @@
 .MuiInput-underline:after {
   border-bottom: 0px;
 }
+
+.event_screenshot_title {
+  margin: 40px 0 40px 0;
+  width: 100%;
+  padding: 0 20px;
+  text-align: center;
+  font-size: 2rem;
+}
+
+.screenshot_container {
+  margin: 0 0 20px 0;
+  padding: 10px;
+  text-align: left;
+  color: inherit;
+  text-decoration: none;
+  /* border: 1px solid #eaeaea; */
+  /* border-radius: 5px; */
+  width: 100% !important;
+  height: auto !important;
+  background-color: #fff;
+  transition: all 0.3s;
+  font-size: 1.4rem;
+  position: relative;
+  box-shadow: 0 1px 4px rgb(0 0 0 / 10%);
+}
+
+.s_content_name {
+  margin: 20px 0 0 0;
+  width: 100%;
+  font-size: 1.4rem;
+}
+
+.s_event_name {
+  margin: 10px 0 0 0;
+  width: 100%;
+  font-size: 1.4rem;
+}
+
+.s_event_date {
+  margin: 10px 0 0 0;
+}
+
+.s_item_name {
+  margin: 20px 0 10px 0;
+  font-size: 1.4rem;
+}
+
+.s_detail_container {
+  margin: 0;
+  width: 100%;
+  padding: 10px 0;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+
+.s_price {
+  margin: 0;
+  width: 100px;
+  text-align: right;
+}
+
+.s_item_type {
+  margin: 0;
+  width: auto;
+  text-align: right;
+}
+
+.s_total_container {
+  margin: 10px 0;
+  width: 100%;
+  height: 30px;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+
+.s_total_count {
+  margin: 0;
+  width: 100px;
+  text-align: right;
+  font-size: 1.4rem;
+  line-height: 30px;
+}
+
+.s_total_price {
+  margin: 0;
+  width: 100px;
+  text-align: right;
+  font-size: 2rem;
+  line-height: 30px;
+}
