--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -249,8 +249,9 @@
 .event_memo_container_active,
 .event_place_container,
 .event_place_container_active {
-  margin: 10px 20px 0 20px;
+  margin: 10px 0 0 0;
   width: 100%;
+  padding: 0 20px;
   position: relative;
   transition: all 0.5s;
   overflow: hidden;
