--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -122,14 +122,14 @@
 
 .title {
   width: 100%;
-  margin: 20px 0 0 0;
+  margin: 20px 0 30px 0;
   font-size: 1.6rem;
   font-weight: bold;
 }
 
 .text {
   width: 100%;
-  margin: 30px 0;
+  margin: 0 0 30px 0;
   font-size: 1.4rem;
   color: #666;
   text-align: left;
