--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -296,3 +296,20 @@
     opacity: 0;
   }
 }
+
+.textCount {
+  margin: 0;
+  width: 100%;
+  padding: 0 10px 10px 10px;
+  text-align: right;
+  font-size: 1.2rem;
+  color: #999;
+}
+
+.nomal {
+  color: #999;
+}
+
+.error {
+  color: #cf6775;
+}
