--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -142,12 +142,10 @@
   margin: 0 0 40px 0;
   -webkit-appearance: none;
 }
-/* .search:focus {
-  outline: none;
-  background-color: #fff;
-  border: 3px solid #bfdcff;
-  transition: all 0.5s;
-} */
+
+.search:focus {
+  border: 1px solid #68a9cf;
+}
 
 .search_container {
   min-width: 300px;
