--- a/src/styles/components/form.module.css
+++ b/src/styles/components/form.module.css
@@ -97,6 +97,12 @@
   border-radius: 5px;
 }
 
+.input_text:focus,
+.input_password:focus,
+.inputTextArea:focus {
+  border: 1px solid #68a9cf;
+}
+
 .input_text_validated,
 .input_password_checked {
   margin: 0;
@@ -166,42 +172,49 @@
 .btn_login_google,
 .btn_login_yahoo {
   box-sizing: border-box;
-  margin: 0 0 20px 0;
+  margin: 0 0 30px 0;
   width: 100%;
-  height: 40px;
-  line-height: 40px;
+  padding: 10px 0;
   position: relative;
   border: none;
-  border-radius: 10px;
+  border-radius: 5px;
   font-size: 1.4rem;
-  color: #fff;
   cursor: pointer;
+  /* box-shadow: 0s 1px 4px rgb(0 0 0 / 10%); */
 }
 
 .btn_login_twitter {
   background-color: #1da1f2;
+  color: #fff;
 }
 
 .btn_login_line {
   background-color: #06c755;
-}
-
-.btn_login_twitter span,
-.btn_login_line span {
-  display: block;
-  content: '';
-  position: absolute;
-  top: 5px;
-  left: 15px;
-  width: 20px;
-  height: 20px;
   color: #fff;
 }
+
+.btn_login_google {
+  background-color: #eeeeee;
+  color: #000;
+}
+.btn_login_yahoo {
+  background-color: #ff0027;
+  color: #fff;
+}
+
 .btn_login_twitter svg,
-.btn_login_line svg {
-  width: 20px;
-  height: 20px;
+.btn_login_line svg,
+.btn_login_google svg,
+.btn_login_yahoo svg {
+  position: absolute;
+  width: 24px;
+  height: 24px;
   fill: #fff;
+  left: 15px;
+  top: 50%;
+  transform: translate(0, -50%);
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
 }
 
 /* ステップ */
