--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -622,12 +622,12 @@
 
 .tag_status {
   margin: 0 20px 0 0;
-  padding: 5px 10px 5px 10px;
+  padding: 8px 10px 8px 10px;
   color: #666;
   font-size: 1.2rem;
   text-align: right;
   position: relative;
-  border-radius: 5px;
+  /* border-radius: 5px; */
   border: 1px solid #999;
 }
 
@@ -644,13 +644,13 @@
 .tag_screenshot {
   width: auto;
   margin: 0 0 20px 20px;
-  padding: 5px 10px 5px 30px;
+  padding: 8px 10px 8px 30px;
   color: #68a9cf;
   font-size: 1.2rem;
   text-align: right;
   position: relative;
   left: -20px;
-  border-radius: 5px;
+  /* border-radius: 5px; */
   border: 1px solid #68a9cf;
   cursor: pointer;
   box-sizing: border-box;
@@ -675,12 +675,12 @@
 
 .tag_twitter {
   margin: 0 20px 0 0;
-  padding: 5px 10px 5px 30px;
+  padding: 8px 10px 8px 30px;
   color: #fff;
   font-size: 1.2rem;
   text-align: right;
   position: relative;
-  border-radius: 5px;
+  /* border-radius: 5px; */
   background-color: #55acee;
 }
 
@@ -701,12 +701,12 @@
 
 .tag_line {
   margin: 0;
-  padding: 5px 10px 5px 30px;
+  padding: 8px 10px 8px 30px;
   color: #fff;
   font-size: 1.2rem;
   text-align: right;
   position: relative;
-  border-radius: 5px;
+  /* border-radius: 5px; */
   background-color: #06c755;
 }
 
@@ -848,17 +848,6 @@
   height: auto;
   font-size: 1.4rem;
   box-shadow: 0 1px 4px rgb(0 0 0 / 10%);
-  border-radius: 5px;
-  overflow: hidden;
-}
-
-.sort_container {
-  margin: 0;
-  width: 160px;
-  height: auto;
-  font-size: 1.4rem;
-  box-shadow: 0 1px 4px rgb(0 0 0 / 10%);
-  border-radius: 5px;
   overflow: hidden;
 }
 
