--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -120,9 +120,7 @@
 
 .search {
   width: 100%;
-  height: 50px;
-  padding: 0 0 3px 20px;
-  line-height: 40px;
+  padding: 15px 0 15px 25px;
   border: 1px solid #fff;
   border-radius: 3rem;
   background-color: #edf2f7;
@@ -132,9 +130,7 @@
 }
 .search_active {
   width: 100%;
-  height: 50px;
-  padding: 0 0 3px 20px;
-  line-height: 40px;
+  padding: 15px 0 15px 25px;
   border: 1px solid #68a9cf;
   border-radius: 3rem;
   background-color: #fff;
@@ -162,8 +158,10 @@
   position: absolute;
   width: 24px;
   width: 24px;
-  top: 12px;
+  /* top: 12px; */
   right: 18px;
+  top: 50%;
+  transform: translate(0, -50%);
 }
 
 .search_button svg,
